Foi adicionado mais um campo para broadcast, Foi adicionado rotina para recuperar string de values

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,6 +11,8 @@
 	<string name="show_label_email">E-mail:</string>
 	<string name="show_label_telefone">Telefone:</string>
 	<string name="show_label_celular">Celular:</string>
+    <string name="developer">Leandro Shindi Ekamoto</string>
 	<string name="ContextoDados_onCreate">CREATE TABLE IF NOT EXISTS pessoas (id INTEGER PRIMARY KEY, nome TEXT, email TEXT);</string>
+    <string name="saudacaoTextView">Olá android</string>
 	
 </resources>
